[UPDATE] Рефактринг стилей

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -19,6 +19,8 @@
 @import "modules/header";
 @import "modules/animations";
 
+@import 'components/main';
+
 .bg-white {
   background-color: #fff;
 }
