--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -6,7 +6,7 @@ include ../modules/recepts.pug
 include ../modules/subscription.pug
 
 block variables
- -var pageTitle='Главная'
+  -var pageTitle='Главная'
 
 mixin main-slider(json)
   each data in json
@@ -46,7 +46,7 @@ block content
     .content.promo-box
       .promo-box-top
         .top-left
-          img(src="./images/promo-box-top.svg", alt="Персонажи")
+          img(src="./images/promo-box-top.svg" alt="Персонажи")
           +icon('promo-box-top-text', 'svg')
         .top-right
           h2 Эксклюзивное право <br>на производство адыгейского сыра
@@ -56,9 +56,9 @@ block content
         .bottom-img
           +icon('print-main', 'svg')
           .mountains
-            img(src="./images/mountains.png", alt="ГоРы")
+            img(src="./images/mountains.png" alt="ГоРы")
             .mountains-cheese
-              img(src="./images/shadow-products.svg", alt="")
+              img(src="./images/shadow-products.svg" alt="")
             +icon('rhombus', 'svg').rhombus-1
             +icon('rhombus', 'svg').rhombus-2
         .bottom-text
@@ -70,27 +70,28 @@ block content
             p Именно это отличает настоящий адыгейский сыр от аналогов из других регионов страны.
   section.news
     .content.news-box
-      .news-box-header
+      .news-header
         h2 Новости
         +link('Все новости', '/news.html', 'true')
-      .news-box-row
-        .news-box-lg
-          .news-box-lg-image
-            img(src="./images/news-background-1.jpg", alt="Новость 1")
-          .news-box-content
-            .news-box-time 25.05
+      .news-row
+        a.news-item(style="--color_rect: #FFF3D6" 
+          href="news_detail.html")
+          .news-item-image
+            img(src="./images/news-background-1.jpg" alt="Новость 1")
+          .news-content
+            .news-time 25.05
               span .2019
-            .news-box-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        .news-box-small
-          .news-box-content
-            .news-box-time 25.05
+            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+        a.news-item(href="news_detail.html")
+          .news-content
+            .news-time 25.05
               span .2019
-            .news-box-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        .news-box-small
-          .news-box-content
-            .news-box-time 25.05
+            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+        a.news-item(href="news_detail.html")
+          .news-content
+            .news-time 25.05
               span .2019
-            .news-box-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
 
   +subscription().bg-white
   +footer().bg-white
