--- a/app/templates/pages/news_list.pug
+++ b/app/templates/pages/news_list.pug
@@ -5,10 +5,80 @@ include ../modules/footer.pug
 include ../modules/header.pug
 
 block variables
- -var pageTitle='Каталог'
+  -var pageTitle='Каталог'
 
 block content
-    +header()
-      
-    +subscription().bg-additional
-    +footer().bg-additional
+  +header()
+  section.main-news.bg-additional
+    .content.news-box
+      .news-header
+        h2 Новости и Акции
+      .news-row
+        a.news-item(style="--color_rect: #FFF3D6" 
+          href="news_detail.html")
+          .news-item-image
+            img(src="./images/news-background-1.jpg" alt="Новость 1")
+          .news-content
+            .news-type Новость
+            .news-time 25.05
+              span .2019
+            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+        a.news-item(href="news_detail.html")
+          .news-content
+            .news-type Акция
+            .news-time 
+              span Действует с 
+              |12.02.2020 
+              span по 
+              |12.04.2020
+            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+        a.news-item(href="news_detail.html")
+          .news-content
+            .news-type Акция
+            .news-time
+              span Действует с 
+              |12.02.2020 
+              span по 
+              |12.04.2020
+            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+        a.news-item(href="news_detail.html")
+          .news-content
+            .news-type Новость
+            .news-time 25.05
+              span .2019
+            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+        a.news-item(href="news_detail.html")
+          .news-content
+            .news-type Новость
+            .news-time 25.05
+              span .2019
+            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+        a.news-item(href="news_detail.html")
+          .news-content
+            .news-type Новость
+            .news-time 25.05
+              span .2019
+            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+        a.news-item(href="news_detail.html")
+          .news-content
+            .news-type Новость
+            .news-time 25.05
+              span .2019
+            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+        a.news-item(href="news_detail.html")
+          .news-content
+            .news-type Новость
+            .news-time 25.05
+              span .2019
+            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+        a.news-item(style="--color_rect: #E6FAE1"
+          href="news_detail.html")
+          .news-item-image
+            img(src="./images/news-background-2.jpg" alt="Новость 1")
+          .news-content
+            .news-type Новость
+            .news-time 25.05
+              span .2019
+            .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+  +subscription().bg-additional
+  +footer().bg-additional
