--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -114,7 +114,7 @@ section {
       content: '';
       display: block;
       width: 100%;
-      height: 800px;
+      height: 850px;
       top: 0px;
       left: 0px;
       z-index: 0;
@@ -137,7 +137,7 @@ section {
       font-weight: normal;
       font-size: 260px;
       color: #fff;
-      top: 17%;
+      top: 19%;
 
       @include screen('md', 'max') {
         display: none;
@@ -258,6 +258,69 @@ section {
         .products-el-title {
           color: #EE7754;
         }
+
+        .products-el-hover {
+          opacity: 1;
+
+          .rhombus-1 {
+            transform: translateX(0) translateY(-50%);
+          }
+        }
+      }
+
+      &-hover {
+        opacity: 0;
+        position: absolute;
+        width: auto;
+        height: 100%;
+        transition: opacity 0.3s;
+        bottom: -10%;
+
+        &::before {
+          position: relative;
+          top: 0;
+          left: 0;
+          display: block;
+          background: #FFE3BE;
+          transform: rotate(45deg);
+          width: 396px;
+          height: 396px;
+          display: block;
+          content: '';
+        }
+
+        .rhombus-1 {
+          position: absolute;
+          left: 0;
+          bottom: 30%;
+          z-index: 10;
+          transition: transform .4s ease-out;
+          font-size: 6px;
+          transform: translateX(-100%) translateY(-50%);
+        }
+
+        .rhombus-2 {
+          position: absolute;
+          right: -17%;
+          top: 8%;
+          transform: scale(.3);
+          z-index: 10;
+        }
+
+        .cloud-1 {
+          position: absolute;
+          left: -5%;
+          top: 8%;
+          z-index: 10;
+        }
+
+        .cloud-2 {
+          position: absolute;
+          right: -14%;
+          bottom: 44%;
+          z-index: 10;
+          transform: translateX(-30%) translateY(-50%);
+        }
       }
 
       &-title {
@@ -291,14 +354,17 @@ section {
           display: block;
           width: 100%;
           height: 100%;
-          bottom: -16%;
+          bottom: -25%;
           left: -50%;
           transform: translateX(30%);
         }
         
         img {
+          max-width: 50%;
+          height: auto;
+
           @include screen('xs', 'max') {
-            width:70%;
+            max-width:50%;
             object-fit:cover;
           }
 
