--- a/app/templates/pages/catalog-products.pug
+++ b/app/templates/pages/catalog-products.pug
@@ -33,39 +33,69 @@ block content
         .main-products-items
           a.products-el(href="#")
             .products-el-img
-              img(src="./images/img-products-1.png")
-              img(src="./images/img-products-1.png")
+              img(src="./images/img-products-1-min.png")
+              img(src="./images/img-products-1-min.png")
             .products-el-title Сыр «Охотничий» копченый
+            .products-el-hover
+              +icon('rhombus', 'svg').rhombus-1
+              +icon('rhombus', 'svg').rhombus-2
+              +icon('cloud-2', 'svg').cloud-1
+              +icon('cloud-1', 'svg').cloud-2
 
           a.products-el(href="#")
             .products-el-img
-              img(src="./images/img-products-2.png")
-              img(src="./images/img-products-2.png")
+              img(src="./images/img-products-2-min.png")
+              img(src="./images/img-products-2-min.png")
             .products-el-title Сыр Косичка «Гиагинский» копченый
+            .products-el-hover
+              +icon('rhombus', 'svg').rhombus-1
+              +icon('rhombus', 'svg').rhombus-2
+              +icon('cloud-2', 'svg').cloud-1
+              +icon('cloud-1', 'svg').cloud-2
 
           a.products-el(href="#")
             .products-el-img
-              img(src="./images/img-products-3.png")
-              img(src="./images/img-products-3.png")
+              img(src="./images/img-products-3-min.png")
+              img(src="./images/img-products-3-min.png")
             .products-el-title Сыр «Чечил» копченый
+            .products-el-hover
+              +icon('rhombus', 'svg').rhombus-1
+              +icon('rhombus', 'svg').rhombus-2
+              +icon('cloud-2', 'svg').cloud-1
+              +icon('cloud-1', 'svg').cloud-2
 
           a.products-el(href="#")
             .products-el-img
-              img(src="./images/img-products-4.png")
-              img(src="./images/img-products-4.png")
+              img(src="./images/img-products-4-min.png")
+              img(src="./images/img-products-4-min.png")
             .products-el-title Сыр «Чечил»
+            .products-el-hover
+              +icon('rhombus', 'svg').rhombus-1
+              +icon('rhombus', 'svg').rhombus-2
+              +icon('cloud-2', 'svg').cloud-1
+              +icon('cloud-1', 'svg').cloud-2
 
           a.products-el(href="#")
             .products-el-img
-              img(src="./images/img-products-5.png")
-              img(src="./images/img-products-5.png")
+              img(src="./images/img-products-5-min.png")
+              img(src="./images/img-products-5-min.png")
             .products-el-title Сыр «Спагетти» «Гиагинский» копченый
+            .products-el-hover
+              +icon('rhombus', 'svg').rhombus-1
+              +icon('rhombus', 'svg').rhombus-2
+              +icon('cloud-2', 'svg').cloud-1
+              +icon('cloud-1', 'svg').cloud-2
 
           a.products-el(href="#")
             .products-el-img
-              img(src="./images/img-products-6.png")
-              img(src="./images/img-products-6.png")
+              img(src="./images/img-products-6-min.png")
+              img(src="./images/img-products-6-min.png")
             .products-el-title Сыр «Косичка» «Гиагинский»
+            .products-el-hover
+              +icon('rhombus', 'svg').rhombus-1
+              +icon('rhombus', 'svg').rhombus-2
+              +icon('cloud-2', 'svg').cloud-1
+              +icon('cloud-1', 'svg').cloud-2
 
     +subscription().bg-white
     +footer().bg-white
