--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -79,18 +79,18 @@ block content
           .news-item-image
             img(src="./images/news-background-1.jpg" alt="Новость 1")
           .news-content
-            .news-time 25.05
-              span .2019
+            .news-time 25.05. 
+              span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
         a.news-item(href="news_detail.html")
           .news-content
-            .news-time 25.05
-              span .2019
+            .news-time 25.05. 
+              span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
         a.news-item(href="news_detail.html")
           .news-content
-            .news-time 25.05
-              span .2019
+            .news-time 25.05. 
+              span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
 
   +subscription().bg-white
