--- a/app/templates/pages/news_list.pug
+++ b/app/templates/pages/news_list.pug
@@ -5,14 +5,14 @@ include ../modules/footer.pug
 include ../modules/header.pug
 
 block variables
-  -var pageTitle='Каталог'
+  -var pageTitle='Список новостей'
 
 block content
   +header()
   section.main-news.bg-additional
     .content.news-box
       .news-header
-        h2 Новости и Акции
+        h1 Новости и Акции
       .news-row
         a.news-item(style="--color_rect: #FFF3D6" 
           href="news_detail.html")
@@ -20,8 +20,8 @@ block content
             img(src="./images/news-background-1.jpg" alt="Новость 1")
           .news-content
             .news-type Новость
-            .news-time 25.05
-              span .2019
+            .news-time 25.05. 
+              span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
         a.news-item(href="news_detail.html")
           .news-content
@@ -44,32 +44,32 @@ block content
         a.news-item(href="news_detail.html")
           .news-content
             .news-type Новость
-            .news-time 25.05
-              span .2019
+            .news-time 25.05. 
+              span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
         a.news-item(href="news_detail.html")
           .news-content
             .news-type Новость
-            .news-time 25.05
-              span .2019
+            .news-time 25.05. 
+              span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
         a.news-item(href="news_detail.html")
           .news-content
             .news-type Новость
-            .news-time 25.05
-              span .2019
+            .news-time 25.05. 
+              span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
         a.news-item(href="news_detail.html")
           .news-content
             .news-type Новость
-            .news-time 25.05
-              span .2019
+            .news-time 25.05. 
+              span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
         a.news-item(href="news_detail.html")
           .news-content
             .news-type Новость
-            .news-time 25.05
-              span .2019
+            .news-time 25.05. 
+              span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
         a.news-item(style="--color_rect: #E6FAE1"
           href="news_detail.html")
@@ -77,8 +77,8 @@ block content
             img(src="./images/news-background-2.jpg" alt="Новость 1")
           .news-content
             .news-type Новость
-            .news-time 25.05
-              span .2019
+            .news-time 25.05. 
+              span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
   +subscription().bg-additional
   +footer().bg-additional
