--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1710,7 +1710,11 @@ section {
     line-height: 24px;
     margin-right: 18px;
     position: relative;
-
+    &.white{
+      &:before{
+        background: #ffffff;
+      }
+    }
     &::after {
       background-image: url('../images/pagination-arrow.svg');
       width: 10.5px;
